# citygen_rs

./: .gitignore  Cargo.toml  README.md  output.geojson
src/: collision.rs  config.rs  generate.rs  main.rs  math.rs  quad_tree.rs  segment.rs  utility.rs
